update repo for new SPLADE version and BEIR evaluation

--- a/inference_SPLADE.ipynb
+++ b/inference_SPLADE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ac4e511-5d44-4c08-a57b-8772b0a3f4ba",
+   "id": "tribal-arnold",
    "metadata": {},
    "source": [
     "# SPLADE: Sparse Lexical and Expansion Model for First Stage Ranking"
@@ -10,25 +10,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e5133de-c802-4669-ae18-3d99c8d3b197",
+   "id": "concrete-collar",
    "metadata": {},
    "source": [
     "This notebook gives a minimal example usage of our SPLADE model. In a nutshell, SPLADE learns **sparse**, **expansion-based** query/doc representations for efficient first-stage retrieval.\n",
     "\n",
-    "Sparsity is induced via a regularization applied on representations, whose strength can be adjusted; it is thus possible to control the trade-off between effectiveness and efficiency. For more details, check our paper, and don't hesitate to reach out ! \n",
+    "Sparsity is induced via a regularization applied on representations, whose strength can be adjusted; it is thus possible to control the trade-off between effectiveness and efficiency. For more details, check our papers, and don't hesitate to reach out ! \n",
+    "* v1 (SIGIR21 short paper): **SPLADE: Sparse Lexical and Expansion Model for First Stage Ranking**, https://arxiv.org/abs/2107.05720\n",
+    "* v2 (arxiv) new pooling + distillation: **SPLADE v2: Sparse Lexical and Expansion Model for Information Retrieval**, https://arxiv.org/abs/2109.10086\n",
     "\n",
-    "We provide weights for two models (in the `weights` folder):\n",
+    "We provide weights for 4 models (in the `weights` folder):\n",
     "\n",
     "| model | MRR@10 (MS MARCO dev) | recall@1000 (MS MARCO dev) | expected FLOPS | ~ avg q length | ~ avg d length | \n",
     "| --- | --- | --- | --- | --- | --- |\n",
-    "| `flops_best` | 32.2 | 95.5 | 0.73 | 15 | 58 |\n",
-    "| `flops_efficient` | 29.6 | 93.3 | 0.05 | 6 | 18 |"
+    "| `flops_best` (**v1**) | 32.2 | 95.5 | 0.73 | 15 | 58 |\n",
+    "| `flops_efficient` (**v1**) | 29.6 | 93.3 | 0.05 | 6 | 18 |\n",
+    "| `splade_max` (**v2**) | 34.0 | 96.5 | 1.32 | 18 | 92 |\n",
+    "| `distilsplade_max` (**v2**) | 36.8 | 97.9 | 3.82 | 25 | 232 |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "03e94b11-ee3c-454d-8858-15b8615a7017",
+   "id": "heavy-negative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,44 +43,60 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "649a7a51-32c5-4e86-921f-cf12b498e738",
+   "id": "continued-offense",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Splade(torch.nn.Module):\n",
     "\n",
-    "    def __init__(self, model_type_or_dir):\n",
+    "    def __init__(self, model_type_or_dir, agg=\"max\"):\n",
     "        super().__init__()\n",
     "        self.transformer = AutoModelForMaskedLM.from_pretrained(model_type_or_dir)\n",
+    "        assert agg in (\"sum\", \"max\")\n",
+    "        self.agg = torch.sum\n",
     "    \n",
     "    def forward(self, **kwargs):\n",
     "        out = self.transformer(**kwargs)[\"logits\"] # output (logits) of MLM head, shape (bs, pad_len, voc_size)\n",
-    "        return torch.sum(torch.log(1 + torch.relu(out)) * kwargs[\"attention_mask\"].unsqueeze(-1), dim=1)"
+    "        if self.agg == \"max\":\n",
+    "            values, _ = torch.max(torch.log(1 + torch.relu(out)) * kwargs[\"attention_mask\"].unsqueeze(-1), dim=1)\n",
+    "            return values\n",
+    "            # 0 masking also works with max because all activations are positive\n",
+    "        else:\n",
+    "            return torch.sum(torch.log(1 + torch.relu(out)) * kwargs[\"attention_mask\"].unsqueeze(-1), dim=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "09cd4b0d-8cc6-4f71-a793-9d8fd4515bf1",
+   "id": "hundred-diana",
    "metadata": {},
    "outputs": [],
    "source": [
     "# set the dir for trained weights \n",
+    "# NOTE: because between v1 and v2 we switched the pooling mechanism (better results with max), we need to prodive\n",
+    "# the agg argument depending on the set of weights we want to use\n",
     "\n",
-    "model_type_or_dir = \"weights/flops_efficient\"\n",
-    "# model_type_or_dir = \"weights/flops_best\""
+    "#### v1\n",
+    "# agg = \"sum\"\n",
+    "# model_type_or_dir = \"weights/flops_efficient\"\n",
+    "# model_type_or_dir = \"weights/flops_best\"\n",
+    "\n",
+    "##### v2\n",
+    "agg = \"max\"\n",
+    "model_type_or_dir = \"weights/splade_max\"\n",
+    "# model_type_or_dir = \"weights/distilsplade_max\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70bdc9ad-5f9e-4682-81ea-dce6c8f255a4",
+   "id": "configured-staff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# loading model and tokenizer\n",
     "\n",
-    "model = Splade(model_type_or_dir)\n",
+    "model = Splade(model_type_or_dir, agg=agg)\n",
     "model.eval()\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_type_or_dir)\n",
     "reverse_voc = {v: k for k, v in tokenizer.vocab.items()}"
@@ -85,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "988f0e04-a323-498b-b3ec-8b2e0e0cd0a0",
+   "id": "rubber-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,16 +117,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b62be12-d956-4fda-a21f-3085fa9ce0c5",
+   "id": "pointed-quick",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of actual dimensions:  15\n",
+      "number of actual dimensions:  78\n",
       "SPLADE BOW rep:\n",
-      " [('glass', 2.22), ('stress', 2.19), ('thermal', 1.91), ('pan', 1.6), ('crack', 1.1), ('created', 0.98), ('caused', 0.77), ('hotter', 0.58), ('adjacent', 0.36), ('create', 0.35), ('area', 0.34), ('break', 0.3), ('plastic', 0.29), ('shatter', 0.11), ('hot', 0.09)]\n"
+      " [('glass', 14.96), ('stress', 14.23), ('cause', 9.77), ('thermal', 6.1), ('stressed', 5.82), ('window', 5.46), ('glasses', 4.68), ('crack', 3.99), ('happen', 3.44), ('why', 3.42), ('material', 3.34), ('break', 2.36), ('shatter', 2.27), ('meaning', 2.24), ('materials', 1.98), ('heat', 1.95), ('caused', 1.74), ('do', 1.49), ('pan', 1.43), ('when', 1.39), ('strike', 1.37), ('too', 1.2), ('create', 1.18), ('it', 1.12), ('temperature', 1.09), ('created', 1.05), ('collapse', 1.04), ('generated', 1.02), ('result', 1.0), ('hot', 0.99), ('area', 0.97), ('formed', 0.92), ('fracture', 0.82), ('later', 0.8), ('factor', 0.7), ('produced', 0.69), ('hotter', 0.67), ('adjacent', 0.67), ('cooler', 0.65), ('occur', 0.65), ('determined', 0.64), ('because', 0.64), ('level', 0.63), ('difference', 0.63), ('if', 0.56), ('and', 0.53), ('than', 0.51), ('one', 0.51), ('factors', 0.51), ('pain', 0.49), ('problem', 0.49), ('related', 0.49), ('form', 0.48), ('generate', 0.44), ('at', 0.44), ('piece', 0.43), ('frame', 0.43), ('cold', 0.41), ('element', 0.41), ('surrounding', 0.38), ('##e', 0.38), ('governed', 0.36), ('pressure', 0.33), ('burst', 0.23), ('failure', 0.23), ('effect', 0.21), ('originated', 0.2), ('cracking', 0.18), ('great', 0.17), ('ceramic', 0.16), ('during', 0.13), ('condition', 0.13), ('heated', 0.11), ('crystal', 0.11), ('windows', 0.07), ('change', 0.06), ('fail', 0.04), ('metal', 0.03)]\n"
      ]
     }
    ],
@@ -132,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
