rename source location

--- a/inference_splade.ipynb
+++ b/inference_splade.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "import torch\n",
     "from transformers import AutoModelForMaskedLM, AutoTokenizer\n",
-    "from src.models.transformer_rep import Splade"
+    "from splade.models.transformer_rep import Splade"
    ]
   },
   {
