--- a/inference_splade.ipynb
+++ b/inference_splade.ipynb
@@ -15,14 +15,13 @@
    "source": [
     "This notebook gives a minimal example usage of SPLADE.\n",
     "\n",
-    "* In this repo, we provide weights for 2 models (in the `weights` folder)\n",
-    "* See [Naver Labs Europe website](https://europe.naverlabs.com/research/machine-learning-and-optimization/splade-models/) for more up-to-date models under various settings\n",
-    "* We also provide two new models via Hugging Face (https://huggingface.co/naver)\n",
+    "* We provide models via Hugging Face (https://huggingface.co/naver)\n",
+    "* See [Naver Labs Europe website](https://europe.naverlabs.com/research/machine-learning-and-optimization/splade-models/) for other intermediate models.\n",
     "\n",
     "| model | MRR@10 (MS MARCO dev) | recall@1000 (MS MARCO dev) | expected FLOPS | ~ avg q length | ~ avg d length | \n",
     "| --- | --- | --- | --- | --- | --- |\n",
-    "| `splade_max` (**v2**) | 34.0 | 96.5 | 1.32 | 18 | 92 |\n",
-    "| `distilsplade_max` (**v2**) | 36.8 | 97.9 | 3.82 | 25 | 232 |\n",
+    "| `naver/splade_v2_max` (**v2** [HF](https://huggingface.co/naver/splade_v2_max)) | 34.0 | 96.5 | 1.32 | 18 | 92 |\n",
+    "| `naver/splade_v2_distil` (**v2** [HF](https://huggingface.co/naver/splade_v2_distil)) | 36.8 | 97.9 | 3.82 | 25 | 232 |\n",
     "| `naver/splade-cocondenser-selfdistil` (**v2bis**, [HF](https://huggingface.co/naver/splade-cocondenser-selfdistil))| 37.6 | 98.4 | 2.32 | 56 | 134 |\n",
     "| `naver/splade-cocondenser-ensembledistil` (**v2bis**, [HF](https://huggingface.co/naver/splade-cocondenser-ensembledistil)) | 38.3 | 98.3  | 1.85 | 44 | 120 |"
    ]
@@ -49,8 +48,8 @@
     "# set the dir for trained weights\n",
     "\n",
     "##### v2\n",
-    "# model_type_or_dir = \"weights/splade_max\"\n",
-    "# model_type_or_dir = \"weights/distilsplade_max\"\n",
+    "# model_type_or_dir = \"naver/splade_v2_max\"\n",
+    "# model_type_or_dir = \"naver/splade_v2_distil\"\n",
     "\n",
     "### v2bis, directly download from Hugging Face\n",
     "# model_type_or_dir = \"naver/splade-cocondenser-selfdistil\"\n",
@@ -207,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
